--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".playActivity" />
         <activity android:name=".instructionsActivity" />
-        <activity android:name=".customizeActivity"></activity>
+        <activity android:name=".customizeActivity" />
+        <activity android:name=".choosedeckActivity"></activity>
     </application>
 
 </manifest>
