--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,14 +17,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".playActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".instructionsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".customizeActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".choosedeckActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".playActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".instructionsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".customizeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".choosedeckActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".CreateDeeckActivity"></activity>
     </application>
 
 </manifest>
